--- a/main.html
+++ b/main.html
@@ -13,15 +13,47 @@
     <body class="container">
 
         <div class="sidebar">
-           sidebar
+           <button class="sidebar__nav-btn"></button> 
         </div>
 
         <header class="header">
-            header
+            <img src="img/logo.png" class="header__logo" alt="">
+            <h3 class="heading-3">Your own home</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+               <img src="img/logo-bbc.png" alt="">
+               <img src="img/logo-forbes.png" alt="">
+               <img src="img/logo-techcrunch.png" alt="">
+               <img src="img/logo-bi.png" alt="">
+            </div>
         </header>
 
          <div class="realtors">
-            Top 3 realtors
+            <h3 class="heading-3">Top 3 Realtors</h3>
+            <div class="realtors__list">
+               <img src="img/realtor-1.jpeg" alt="" class="realtors__img">
+               <div class="realtors__details">
+                  <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                  <p class="realtors__sold">245 Houses sold</p>
+               </div>
+
+               <img src="img/realtor-2.jpeg" alt="" class="realtors__img">
+               <div class="realtors__details">
+                  <h4 class="heading-4 heading-4--light">Kim brown</h4>
+                  <p class="realtors__sold">500 Houses sold</p>
+               </div>
+
+               <img src="img/realtor-3.jpeg" alt="" class="realtors__img">
+               <div class="realtors__details">
+                  <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                  <p class="realtors__sold">300 Houses sold</p>
+               </div>
+            </div>
+
+            
+
          </div>
 
          <section class="features">
@@ -121,7 +153,7 @@
                   </svg>
                   <p>$1,200,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
             <div class="home">
@@ -154,7 +186,7 @@
                   </svg>
                   <p>$1,700,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
             <div class="home">
@@ -187,7 +219,7 @@
                   </svg>
                   <p>$850,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
             <div class="home">
@@ -220,7 +252,7 @@
                   </svg>
                   <p>$1,950,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
             <div class="home">
@@ -253,7 +285,7 @@
                   </svg>
                   <p>$9,500,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
             <div class="home">
@@ -286,17 +318,39 @@
                   </svg>
                   <p>$600,000</p>
                </div>
-               <button class="cta">Contacty realtor</button>
+               <button class="btn home__btn">Contacty realtor</button>
             </div>
 
          </section>
 
          <section class="gallery">
-            Gallery
+            <figure class="gallery__item gallery__item--1"><img src="img/gal-1.jpeg" alt="Galery image 1" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--2"><img src="img/gal-2.jpeg" alt="Galery image 2" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--3"><img src="img/gal-3.jpeg" alt="Galery image 3" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--4"><img src="img/gal-4.jpeg" alt="Galery image 4" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--5"><img src="img/gal-5.jpeg" alt="Galery image 5" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--6"><img src="img/gal-6.jpeg" alt="Galery image 6" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--7"><img src="img/gal-7.jpeg" alt="Galery image 7" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--8"><img src="img/gal-8.jpeg" alt="Galery image 8" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--9"><img src="img/gal-9.jpeg" alt="Galery image 9" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--10"><img src="img/gal-10.jpeg" alt="Galery image 10" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--11"><img src="img/gal-11.jpeg" alt="Galery image 11" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--12"><img src="img/gal-12.jpeg" alt="Galery image 12" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--13"><img src="img/gal-13.jpeg" alt="Galery image 13" class="gallery__img"></figure>
+            <figure class="gallery__item gallery__item--14"><img src="img/gal-14.jpeg" alt="Galery image 14" class="gallery__img"></figure>
          </section>
 
          <footer class="footer">
-            Footer
+            <ul class="nav">
+               <li class="nav__item"><a href="#" class="nav__link"> find your drem job</a></li>
+               <li class="nav__item"><a href="#" class="nav__link"> request proposal</a></li>
+               <li class="nav__item"><a href="#" class="nav__link"> download home planner</a></li>
+               <li class="nav__item"><a href="#" class="nav__link"> contact us</a></li>
+               <li class="nav__item"><a href="#" class="nav__link"> submit your property</a></li>
+               <li class="nav__item"><a href="#" class="nav__link"> come work with us</a></li>
+            </ul>
+            
+            <p class="copyright">&copy Copyright 2017 by Ana meskhi, Feel free to use this project for your own purpose.This does NOT apply if you plan to produce your own video course or tutorials based on this project.</p>
          </footer>
     </body>
 </html> 
